# hexacore-command

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .pymarkdown.yml  CONTRIBUTING.md  README.md  Taskfile.yml  pyproject.toml  radon.cfg
.devcontainer/: devcontainer.json
.windsurf/: workflows.md
.windsurf/archive/workflows/: execute-mvp-roadmap.md
.windsurf/rules/: 00_agent_directives.md  01_architecture.md  02_game_mechanics.md  03_bot_scripting_language.md  04_assets_and_data.md  05_documentation_lifecycle.md  06_testing_and_tooling.md
.windsurf/workflows/: archive-initiative.md  commit.md  continue.md  develop-feature.md  execute-mvp-roadmap.md  implement-new-game-logic.md  propose-new-adr.md  update-living-documentation.md
assets/: manifest.json
assets/maps/: level_01.json
assets/scripts/: enemy_dummy.hxc  player_default.hxc
docs/: MVP_Roadmap.md  architecture.md  game_mechanics.md  renderer.md  renderer_gameplay.md
docs/decisions/: 0001-record-architecture-decisions-with-adr.md  0002-implement-ecs-pattern.md  0003-implement-event-bus.md  0004-implement-custom-scripting-language.md  0005-performance-and-benchmarking-strategy.md
docs/initiatives/: 0001-interactive-debugging-mode.md  0002-mvp-ui-implementation.md  0003-code-complexity-analysis.md  0004-behavior-driven-development.md  0005-parallel-test-execution.md  0006-arcade-renderer-integration.md  README.md
docs/initiatives/archive/: 0002-mvp-ui-implementation.md  0003-code-complexity-analysis.md  0004-behavior-driven-development.md
docs/templates/: document_template.md
docs/testing/: bdd_playbook.md  pytest_codspeed.md  testing_playbook.md
docs/tooling/: editing-tools.md  mcp-servers.md
src/hexa_core/: __init__.py  main.py
src/hexa_core/engine/: __init__.py  assets.py  benchmarking.py  (+6 more)
tests/: __init__.py
tests/benchmarks/: __init__.py  test_world_process_codspeed.py
tests/features/: bot_movement.feature  test_bot_movement_bdd.py
tests/property/: test_hex_coord_property.py
tests/spec/: __init__.py  test_asset_loaders_spec.py  test_benchmark_registry_spec.py  test_combat_system_spec.py  test_core_datatypes_spec.py  test_event_bus_world_spec.py  test_movement_system_spec.py  test_renderer_app_spec.py  test_renderer_spec.py  test_script_runner_spec.py  test_turn_manager_spec.py
tools/pymarkdown_plugins/: front_matter_validator.py
(+9 files in other folders)
