[project]
name = "hexa_core"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "arcade==2.6.17",
  "esper==3.3.0",
  "sly==0.5"
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "spec-kit==1.0.0",
  "ruff==0.1.6",
  "mypy==1.7.0",
  "pre-commit==3.5.0",
  "markdownlint-cli==0.37.0",
  "pytest-benchmark==4.0.0",
  "types-Pygments"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
