[project]
name = "hexa_core"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "arcade==3.0.0",
  "esper==3.3.0",
  "sly==0.5"
]

[project.optional-dependencies]
dev = [
  "pytest==7.4.3",
  "specify-cli @ git+https://github.com/github/spec-kit.git",
  "ruff==0.1.6",
  "mypy==1.7.0",
  "pre-commit==3.5.0",
  "pymarkdownlnt>=0.9.18",
  "radon==6.0.1",
  "pytest-bdd==7.0.0",
  "pytest-codspeed==2.2.1",
  "pytest-xdist==3.5.0",
  "hypothesis==6.99.0",
  "types-Pygments"
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "tests"

[tool.ruff]
line-length = 250

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP", "ANN", "SIM", "S", "T20"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-describe>=2.2.0",
]
